# similarity-search

./: .gitignore  app.py  data.json  download_images.py  main.py  pyproject.toml  similarity.py
templates/: index.html
